# verdesat

./: .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  Oaxaca_report.html  README.md  dens.csv  pyproject.toml  requirements.txt  setup.py  setup.sh  timeseries.csv
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
analytics/: decomposition.py
core/: cli.py  utils.py
docs/: MODULES.md  ai_report_spec.md  app_style.md  architecture.md  development_principles.md  hardcoded_audit.md  mid-audit.md  refactoring roadmap.md  report_unification.md  reporting_templates.md  roadmap.md  roadmap_features.md  roadmap_tech.md  spec_codex_prompt.md  streamlit.md
examples/: 01_NDVI_Report_Pipeline.ipynb  01_Reforestation_Analysis.ipynb  02_Biodiversity_Scoring.ipynb  02_Impact_Fund_Screening.ipynb  map.html  reforestation_plots.geojson  reforestation_ts.csv
examples/decomp/: 1_decomposition.csv
examples/examples/: bscore.csv  ndvi_timeseries.html  reforestation_ts.csv
examples/examples/decomp/: 2_decomposition.csv  3_decomposition.csv
ingestion/: custom_indices.py  shapefile_preprocessor.py
modeling/: pipelines.py
scripts/: inventory.py
tests/: conftest.py  test_analytics_engine.py  test_aoi.py  test_chips.py  test_chips_exporter.py  test_chips_utils.py  test_cli.py  test_cli_ai_report.py  test_cli_pack.py  test_cli_stats.py  test_config.py  test_dataingestor.py  test_downloader.py  test_eemanager.py  test_indices.py  test_landcover_service.py  test_logger.py  test_msa_service.py  test_raster_utils.py  test_report.py  test_report_pipeline.py  test_reporting_schemas.py  test_sensorspec.py  test_shapefile_preprocessor.py  test_timeseries.py  test_vector_preprocessor.py  test_visualizer.py
tests/adapters/: test_llm_openai.py  test_prompt_store.py
tests/biodiv/: test_bscore.py  test_gbif_validator.py  test_metrics.py
tests/fixtures/: stub_lc.tif
tests/project/: test_project.py
tests/services/: test_ai_report.py  test_report_ai_integration.py  test_reporting_service.py
tests/visualization/: test_figures.py
tests/webapp/: test_app.py  test_charts.py  test_compute_service.py  test_exports.py  test_kpi_cards.py  test_map_widget.py  test_project_compute_service.py  test_project_state.py  test_r2_service.py  test_reporting_bridge.py
verdesat/adapters/: __init__.py  llm_openai.py  prompt_store.py
verdesat/analytics/: __init__.py  decomposition.py  ee_chipping.py  ee_masking.py  engine.py  preprocessing.py  results.py  stats.py  timeseries.py  timeseries_old.py  timeseries_stub.py  trend.py
verdesat/biodiv/: __init__.py  bscore.py  gbif_validator.py  metrics.py
verdesat/config/: bscore_weights.yaml  storage.yaml
verdesat/core/: cli.py  config.py  logger.py  pipeline.py  storage.py  utils.py
verdesat/geo/: aoi.py  utils.py
verdesat/ingestion/: __init__.py  base.py  chips.py  dataingestor.py  downloader.py  earthengine_ingestor.py  eemanager.py  indices.py  mask.py  sensorspec.py  shapefile_preprocessor.py  vector_preprocessor.py
verdesat/modeling/: forecast.py
verdesat/project/: project.py
verdesat/resources/: MSAVI_1_2024-01-01.tif  MSAVI_2_2024-01-01.tif  NDVI_1_2024-01-01.tif  NDVI_2_2024-01-01.tif  edge_ranges.yaml  index_formulas.json  reference.geojson  sensor_specs.json  webapp.toml
verdesat/schemas/: ai_report.py  reporting.py
verdesat/services/: __init__.py  ai_report.py  base.py  bscore.py  landcover.py  msa.py  raster_reader.py  raster_utils.py  report.py  reporting.py  timeseries.py
verdesat/templates/: evidence_pack_report.html.j2  gallery.html.j2  print.css  project_pack_report.html.j2  report.html.j2
verdesat/visualization/: __init__.py  _chips_config.py  _collect.py  animate.py  chips.py  figures.py  gallery.py  plotly_viz.py  report.py  static_viz.py  visualizer.py  vizualizer.py
verdesat/webapp/: app.py
verdesat/webapp/components/: charts.py  kpi_cards.py  layout.py  map_widget.py
verdesat/webapp/services/: chip_service.py  compute.py  exports.py  project_compute.py  project_state.py  r2.py  reporting_bridge.py
verdesat/webapp/themes/: __init__.py
