[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "verdesat"
version = "0.1.0"
description = "Minimal open EO pipeline for land monitoring"
authors = ["Andrey Dara <andreydara@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["earth observation", "remote sensing", "satellite", "climate"]
packages = [{ include = "verdesat" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=2.2.6,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
pandas-stubs = ">=2.2.3.250527,<3.0.0.0"
scipy = ">=1.15.3,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.29.5,<7.0.0"
earthengine-api = ">=1.5.17,<2.0.0"
geemap = ">=0.35.3,<0.36.0"
rasterio = ">=1.4.3,<2.0.0"
geopandas = ">=1.0.1,<2.0.0"
shapely = ">=2.1.1,<3.0.0"
folium = ">=0.19.6,<0.20.0"
pyproj = ">=3.7.1,<4.0.0"
rioxarray = ">=0.14.1"
xarray = ">=2022.9.0"
xarray-spatial = ">=0.2.4"
matplotlib = ">=3.4.0"
plotly = ">=5.3.0"
statsmodels = ">=0.13.0"
scikit-learn = ">=1.0.0"
imageio = ">=2.37.0"
xgboost = ">=1.5.0"
tqdm = ">=4.67.1,<5.0.0"
types-requests = ">=2.32.0.20250515,<3.0.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.1.1"

[tool.poetry.scripts]
verdesat = "verdesat.core.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
