[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import"]

[tool.poetry]
name = "verdesat"
version = "0.1.0"
description = "Minimal open EO pipeline for land monitoring"
authors = ["Andrey Dara <andreydara@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["earth observation", "remote sensing", "satellite", "climate"]
packages = [{ include = "verdesat" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=2.2.6,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
pandas-stubs = ">=2.2.3.250527,<3.0.0.0"
scipy = ">=1.15.3,<2.0.0"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.29.5,<7.0.0"
earthengine-api = ">=1.5.17,<2.0.0"
rasterio = ">=1.4.3,<2.0.0"
geopandas = ">=1.0.1,<2.0.0"
shapely = ">=2.1.1,<3.0.0"
matplotlib = ">=3.4.0"
plotly = ">=5.3.0"
statsmodels = ">=0.13.0"
imageio = ">=2.37.0"
types-requests = "^2.32.0.20250515"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
types-pyyaml = "^6.0.12.20250516"
pygbif = "^0.6.5"
ebird-api = "^4.0.0"
pyinaturalist = "^0.20.1"
boto3 = "^1.39.16"
streamlit = "^1.47.1"
streamlit-folium = "^0.25.0"
folium = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
types-requests = "^2.32.0.20250515"
streamlit-extras = "^0.7.5"

[tool.poetry.scripts]
verdesat = "verdesat.core.cli:cli"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501", "F401", "F841"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
